--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
      <div class="container"> </div>
          
 
-    <div id="click">
-        <button onclick="window.location.href='index.html'">Magic 8 Ball</button>
+    <div class="question-box">
+   <!--  <input type="button" value="" id="enter">  -->
+    <textarea id="questionbox" placeholder="Ask a question!"></textarea>
+    </div>
+
+
+
+
+    <div class="clicks">
+        <button onclick="window.location.href='index.html'">ASK</button>
     </div>
 
     <h2 id="display">Replace with response</h2>
