--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="question-box">
    <!--  <input type="button" value="" id="enter">  -->
-    <textarea id="questionbox" placeholder="Ask a question!"></textarea>
+    <textarea id="questionbox" placeholder="Ask a yes/no question!"></textarea>
     </div>
 
 
